kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: thinklabs-wp
  labels:
    app: thinklabs-wp-site-deployment
  name: thinklabs-wp-site-deployment
spec:
  selector:
    matchLabels:
      app: thinklabs-wp-site-deployment
  template:
    metadata:
      labels:
        app: thinklabs-wp-site-deployment
    spec:
      volumes:
      - name: thinklabs-wp-site-deployment-volume
        persistentVolumeClaim:
          claimName: thinklabs-wp-site-deployment-claim
      containers:
        - image: 859856990833.dkr.ecr.us-east-2.amazonaws.com/wordpress-6:latest
          name: thinklabs-wp-site-deployment
          ports:
          - containerPort: 80
            name: wordpress
          volumeMounts:
          - name: thinklabs-wp-site-deployment-volume
            mountPath: /var/www/html
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 512Mi
              cpu: 500m
      restartPolicy: Always
