kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carwash-blog-svc
spec:
  type: ClusterIP
  selector:
    app: carwash-blog
  ports:
    - name: http
      port: 80
      targetPort: 80
