kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: thinklabs-wp-admin-site
  name: thinklabs-wp-admin-site-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-thinklabsllc-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/server-snippet: |
      more_set_headers "X-Forwarded-Proto: https";
      more_set_headers "use-forwarded-headers: true";

    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wp.thinklabsllc.com
        - www.wp.thinklabsllc.com
      secretName: thinklab-io-tls
  rules:
    - host: wp.thinklabsllc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thinklabs-wp-admin-site-svc
                port:
                  number: 80
